--- a/content/post/art_201601061212.md
+++ b/content/post/art_201601061212.md
@@ -1,5 +1,5 @@
 +++
-title = "雪中猎人"
+title = "猎人"
 description = ""
 tags = [
     "Art"
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![](/images/post/20160106165800.jpg)
 
-* 很有意境的一幅画（[查看大图](/images/post/20160106161600.jpg)）
+* 雪中猎人（[查看大图](/images/post/20160106161600.jpg)）
