--- a/content/post/art_201601080836.md
+++ b/content/post/art_201601080836.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![](/images/post/20160108084900.jpg)
+![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160108084900.webp)
 
-* 末日销魂（[查看大图](/images/post/20160108084900.jpg)）
+* 末日销魂（[查看大图](/images/post/20160108084900.webp)）
