--- a/content/post/day_201601010000.md
+++ b/content/post/day_201601010000.md
@@ -5,4 +5,4 @@ menu = "main"
 +++
 
 2016年，很好。
-![](/images/post/20160101121200.png)
+![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160101121200.webp)
