--- a/content/post/art_201601071212.md
+++ b/content/post/art_201601071212.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![](/images/post/20160107165800.jpg)
+![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160107165800.webp)
 
-* 很喜欢这幅画（[查看大图](/images/post/20160107161300.png)）
+* 很喜欢这幅画（[查看大图](/images/post/20160107161300.webp)）
