--- a/content/post/art_201601090836.md
+++ b/content/post/art_201601090836.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![](/images/post/20160109084900.jpg)
+![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160109084900.webp)
 
-* 无题（[查看大图](/images/post/20160109084900.jpg)）
+* 无题（[查看大图](/images/post/20160109084900.webp)）
