--- a/content/post/art_201601100836.md
+++ b/content/post/art_201601100836.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![](/images/post/20160110095600.jpg)
+![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160110095600.webp)
 
-* 花开有季（[查看大图](/images/post/20160110095600.jpg)）
+* 花开有季（[查看大图](/images/post/20160110095600.webp)）
