--- a/content/post/art_201601041212.md
+++ b/content/post/art_201601041212.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160104122100.webp)
 
-* 何处有人家（[查看大图](/images/post/20160104122100.webp)）
+* 何处有人家（[查看大图](/images/post/20160104122100.webp)	&middot; [JPEG](/images/post/20160104122100.jpg)）
