--- a/content/post/art_201601061212.md
+++ b/content/post/art_201601061212.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160106165800.webp)
 
-* 雪中猎人（[查看大图](/images/post/20160106161600.webp)）
+* 雪中猎人（[查看大图](/images/post/20160106161600.webp) &middot; [JPEG](/images/post/20160106161600.jpg))
