--- a/content/post/art_201601080836.md
+++ b/content/post/art_201601080836.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160108084900.webp)
 
-* 末日销魂（[查看大图](/images/post/20160108084900.webp)）
+* 末日销魂（[查看大图](/images/post/20160108084900.webp) &middot; [JPEG](/images/post/20160108084900.jpg)）
