just fixed a article

--- a/content/post/dev_201601121531.md
+++ b/content/post/dev_201601121531.md
@@ -43,7 +43,7 @@ gogs 打开一个android app库的资源文件夹(http://gogs.me/coding/Coding-A
 ## >ulimit
 
 ```
-[git@linux gogs]# ulimit -a
+[git@linux gogs]$ ulimit -a
 core file size          (blocks, -c) 0
 data seg size           (kbytes, -d) unlimited
 scheduling priority             (-e) 0
