--- a/content/post/dev_201601121531.md
+++ b/content/post/dev_201601121531.md
@@ -67,9 +67,16 @@ file locks                      (-x) unlimited
 ## >解决方案
 
 ```
+[root@linux gogs]# cat /proc/sys/fs/file-max
+813396
+
 [root@linux gogs]# ulimit -n 32768
 
-[root@linux gogs]# ulimit -u 32768
+[root@linux gogs]# ulimit -Sn
+32768
+
+[root@linux gogs]# ulimit -Hn
+65536
 
 [root@linux gogs]# ulimit -a
 core file size          (blocks, -c) 0
@@ -190,3 +197,38 @@ file locks                      (-x) unlimited
 * 永久地，通过将一个相应的 ulimit 语句添加到由登录 shell 读取的文件之一
   （例如 ~/.profile 或者 ~/.bashrc），即特定于 shell 的用户资源文件；
   或者通过编辑 /etc/security/limits.conf.
+
+## >后记
+* 以上方法并没有完全解决gogs:too many files -> return 500的问题,如果以服务的模式运行
+  ```[root@linux gogs]# systemctl start gogs.service```问题依然存在，但是在Shell
+  会话中```[git@linux gogs]$ ./gogs web ```就没有问题了。Google了一下还是没有什么好
+  的思路，就去github.com/gogits/gogs的Issue中找答案，那里本来就有一个关于too many
+  files的讨论。
+* 原来是sysemd在搞怪。systemd对limits的配置是在相应的服务定义文件中（如gogs的服务定义是在
+  /usr/lib/systemd/system/gogs.service），如果需要配置相应的limits，systemd
+  提供了对应的```directive```(eg: ```LimitNOFILE``` ```LimitMEMLOCK``` ...)，
+  systemd忽略通过ulimit配置的limits（是否理会/etc/security/limits.conf中的配置以及如
+  何响应就不得而知了，没有深究）对systemd不是特别了解，有时间再深入研究。
+* 下面是我的gogs.service
+
+```
+[git@linux gogs]$ cat /usr/lib/systemd/system/gogs.service
+[Unit]
+Description=Gogs (Go Git Service)
+After=syslog.target
+After=network.target
+
+[Service]
+LimitMEMLOCK=infinity
+LimitNOFILE=65535
+Type=simple
+User=git
+Group=git
+WorkingDirectory=/home/git/opt/gogs
+ExecStart=/home/git/opt/gogs/gogs web
+Restart=always
+Environment=USER=git HOME=/home/git
+
+[Install]
+WantedBy=multi-user.target
+```
