--- a/content/post/dev_201601121531.md
+++ b/content/post/dev_201601121531.md
@@ -201,9 +201,9 @@ file locks                      (-x) unlimited
 ## >后记
 * 以上方法并没有完全解决gogs:too many files -> return 500的问题,如果以服务的模式运行
   ```[root@linux gogs]# systemctl start gogs.service```问题依然存在，但是在Shell
-  会话中```[git@linux gogs]$ ./gogs web ```就没有问题了。Google了一下还是没有什么好
-  的思路，就去github.com/gogits/gogs的Issue中找答案，那里本来就有一个关于too many
-  files的讨论。
+  会话中```[git@linux gogs]$ ./gogs web ```却没有问题，不再出现too many files 的错误。
+  Google了一下还是没有什么好的思路，就去github.com/gogits/gogs的Issue中找答案，那里本来
+  就有一个关于too manyfiles的讨论[GitHub Issue](https://github.com/gogits/gogs/issues/1270)。
 * 原来是sysemd在搞怪。systemd对limits的配置是在相应的服务定义文件中（如gogs的服务定义是在
   /usr/lib/systemd/system/gogs.service），如果需要配置相应的limits，systemd
   提供了对应的```directive```(eg: ```LimitNOFILE``` ```LimitMEMLOCK``` ...)，
