--- a/content/post/art_201601051212.md
+++ b/content/post/art_201601051212.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160105091800.webp)
 
-* 浪尽天涯（[查看大图](/images/post/20160105091801.webp) &middot; [JPEG](/images/post/20160105091801.jpg)）
+* 浪尽天涯（[查看大图](/images/post/20160105091801.webp "webp格式图片") &middot; [JPEG](/images/post/20160105091801.jpg "jpeg格式图片")）
