--- a/content/post/art_201601090836.md
+++ b/content/post/art_201601090836.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160109084900.webp)
 
-* 无题（[查看大图](/images/post/20160109084900.webp) &middot; [JPEG](/images/post/20160109084900.jpg)）
+* 无题（[查看大图](/images/post/20160109084900.webp "webp格式图片") &middot; [JPEG](/images/post/20160109084900.jpg "jpeg格式图片")）
