--- a/content/post/art_201601100836.md
+++ b/content/post/art_201601100836.md
@@ -13,4 +13,4 @@ menu = "Art"
 
 ![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160110095600.webp)
 
-* 花开有季（[查看大图](/images/post/20160110095600.webp) &middot; [JPEG](/images/post/20160110095600.jpg)）
+* 花开有季（[查看大图](/images/post/20160110095600.webp "webp格式图片") &middot; [JPEG](/images/post/20160110095600.jpg "jpeg格式图片")）
