--- a/content/post/day_201601201649.md
+++ b/content/post/day_201601201649.md
@@ -33,10 +33,10 @@ menu = "main"
 我们今年二十七八岁，回想起曾经，我们做了太多的错事，走了太多的弯路，我们总是在后悔，可是我
 们回不去了，回不去那个曾经纯真的年代了。当我们被社会上无形的压力压的喘不过去的时候，我们渴
 望曾经的那份爱，渴望每天下班有人一起吃饭，一起看电影，我们需要有一个人为我们，来分担一些东
-西。我们在一条伟大的航路上我们需要有人为我们鼓劲，也许我们累倒想放弃，深吸一口气，继续向前
+西。我们在一条伟大的航路上,我们需要有人为我们鼓劲，也许我们累倒想放弃，深吸一口气，继续向前
 走，我深信，总有一个能靠岸的彼岸。
 
-我们今年二十七八岁，无聊时我们没有去玩游戏，我们开始上平购宝购物，挑折扣，买正品。
+今年我们二十七八岁，无聊时我们没有去玩游戏，我们开始上平购宝购物，挑折扣，买正品。
 
 我们今年二十七八岁，孤单时我们没有去网吧，我们用手机隐身上QQ，看看谁在线，看看熟悉的人，想
 说点什么，究竟又什么也没说，就这样反复纠结的着…我们把空间刷新了一遍又一遍，看看谁更新心情了，
