--- a/content/post/dev_201601222145.md
+++ b/content/post/dev_201601222145.md
@@ -9,13 +9,11 @@ categories = [
 ]
 menu = "Development"
 +++
-### >About
+### &sect;About
 
 IRC(Internet Relay Chat) is an application layer protocol that facilitates communication in the form of text.[[wikipedia]][3]
 
----
-
-### >The Beginning
+### &sect;The Beginning
 
 IRC was born during summer 1988 when Jarkko "WiZ" Oikarinen wrote the first IRC client and server at the University of Oulu, Finland (where he was working at the Department of Information Processing Science).
 
@@ -39,8 +37,7 @@ In July 1990, IRC averaged at 12 users on 38 servers.
 
 In 1990, a new network was set up in order to develop a new version (2.6) of the ircd. The network named ChNet (about 25 servers and no users) existed a few months before disagreements among the programmers caused it to dissolve.
 
----
-### >EFnet
+### &sect;EFnet
 
 In August 1990 the first major disagreement took place in the IRC world. The "A-net" (Anarchy net) included as server named eris.berkeley.edu. It was all open, required no passwords and had no limit on the number of connects. As Greg "wumpus" Lindahl explains: "it had a wildcard server line, so people were hooking up servers and nick-colliding everyone".
 
@@ -50,25 +47,19 @@ TubNet was the next network to splinter off. It was created by a crowd of people
 
 One often-talked-about event in the history of IRC is the gulf war. In early 1991, live reports were available and more than 300 concurrent users were experienced for the first time.
 
----
-
-### >Undernet
+### &sect;Undernet
 
 Another fork effort, the first that really made a big and lasting difference, was initiated by 'Wildthang' in USA October 1992 (it forked off the EFnet ircd version 2.8.10). It was meant to be just a test network to develop bots on but it quickly grew to a network "for friends and their friends". In Europe and Canada a separate new network was being worked on (by '_dl' and 'WIZZARD') and in December the french servers connected to the canadian ones, and in the end of the month, the .fr-.ca network was connected to the US one and the network that later came to be called "The Undernet" was born.
 
 The "undernetters" wanted to take ircd further in an attempt to make it less bandwidth consumptive and to try to sort out the channel chaos (netsplits and takeovers) that EFnet started to suffer from. For the latter purpose, the Undernet implemented timestamps, new routing and offered the CService -- a program that allowed users to register channels and then attempted to protect them from troublemakers. (More or less a global defense bot.) The very first server list presented, from Febrary 15th 1993, includes servers from USA, Canada, France, Kroatia and Japan. On August 15th, the new user count record was set to 57 users.
 
----
-
-### >RFC
+### &sect;RFC
 
 In May 1993, the Request For Comments 1459, for the IRC protocol is out for the public. It has since been subject to many violations and extensions.
 
 It is notable that the CTCP parts and things like colors and formats are not included in the protocol spec. Nor is character encoding.
 
----
-
-### >Dalnet
+### &sect;Dalnet
 
 During the summer (some sources mention July) 1994, the Undernet is itself forked. This time, the new Network is called Dalnet (named after its founder: dalvenjah), and they formed the new network for better user service and even more user and channel protections. One of the more significant changes in Dalnet already from the beginning is their use of longer nicknames (the original ircd limit being 9 letters). Dalnet ircd modifications were made by Alexei "Lefler" Kosut.
 
@@ -78,19 +69,15 @@ Dalnet quickly offered global WallOps (IRCop messages that can be seen by users 
 
 Much of Dalnet's new functions were written in early 1995 by Brian "Morpher" Smith and allow users to own nicknames, channels, send memos and more.
 
-### >oz.org
+### &sect;oz.org
 
 Undernet split (again) in March 1996 when the sole Australian server delinked from Undernet because of difficulties with the connection across the TransPacific Australian/United States network link. The first few months of oz.org's existance were primarily a trial delink from the Undernet because of the inability to maintain a link during peak usage hours. One of the two designers (chaos and seks) of the orginal Undernet X and W chanserv was Australian, and the same code was used for Oz.org's Z (the name of the chanserv). In June 2001, ozorg boasted peak usages of 4,000 simultaneous users.
 
----
-
-### >IRCnet
+### &sect;IRCnet
 
 In July 1996, after months of flame wars and discussions on the mailing list, there was yet another split due to disagreement in how the development of the ircd should evolve. Most notably, the "european" (most of those servers were in europe) side that later named itself IRCnet argued for nick and channel delays, where the EFnet side argued for timestamps. Most (not all) of the IRCnet servers were in Europe, while most of the EFnet server were in the US. This event is also known as "The Great Split" in many IRC societies. EFnet has since (as of August 1998) grown and passed the number of users it had then. In the autumn year 2000, EFnet has some 50,000 users and IRCnet 70,000.
 
----
-
-### >Freenode - Open Projects Network
+### &sect;Freenode - Open Projects Network
 
 Yet another IRC network that opened its doors in 1998 named the Open Projects Network, and had about 100 users and less than 20 channels that year. In late 2001 it had grown to nearly 4,000 users and over 1,300 channels. The OPN uses the Dancer IRCD server, after having been using ircu the intial few years.
 
@@ -98,17 +85,13 @@ This network was later renamed to **Freenode** .
 
 In 2011, it peaks at 65,000 users in 40,000 channels.
 
----
-
-### >Other Networks
+### &sect;Other Networks
 
 Of course, while internet is booming so does IRC. There exists hundreds of independent IRC networks today (like amiganet, linuxnet, galaxynet, bestnet, NewNet, AnotherNet, ChatNet, UpperNet, ZAnet, X-Net, GammaNet, SuperChat, IceNet, RedBrasil, GR-Net, AlphaStar, SorceryNet etc), but luckily there is "only" four of the main ones (this was the reality back in 1998) that keep develop their own version of the ircd server software.
 
 Of course, as of 2002, lots of other networks have popped up and now numerous of them are developing their own customized versions of the IRC protocol.
 
----
-
-### >Further Standardization Attempts
+### &sect;Further Standardization Attempts
 
 IETF-IRCUP was an initiative started in January 1998, to gather all the flavours of IRC servers to document a new RFC and possibly set a new standard for all networks to commit to. That project died.
 
@@ -116,7 +99,7 @@ CTCP/2 was an attempt, started in 1997 by Bjorn Reese, to develop and standardiz
 
 We'll just have to wait and see what the future of IRC has to show...
 
-### >IRC Popularity
+### &sect;IRC Popularity
 
 According to measurements done by [**irc.netsplit.de**][0], IRC in general have lost users gradually since 2004/2005. Those years, the top 4 IRC networks all had over 100,000 users each on a daily basis. Those networks were Quakenet, Undernet, IRCnet and EFnet. Quakenet was in the lead with more than 200,000 users.
 
