--- a/content/post/day_201512312359.md
+++ b/content/post/day_201512312359.md
@@ -4,11 +4,8 @@ date = "2015-12-31"
 menu = "main"
 +++
 
-今天是2015年的最后一天，天气晴，我决定去 *逛一逛* 。
+![](/images/post/20151231235900.webp)
 
+* 今天是2015年的最后一天，天气晴，我决定去 *逛一逛* 。
 
-### 途经
-
-* 北高峰
-* 西湖
-* 太子湾
+* 途经[北高峰->灵隐寺->西湖->太子湾]
