--- a/content/post/day_201601261406.md
+++ b/content/post/day_201601261406.md
@@ -4,7 +4,7 @@ date = "2016-01-26"
 menu = "main"
 +++
 
-### 配置清单
+#### 配置清单
 
 * CPU : AMD APU系列 A6-7400K 双核 R5核显 FM2+接口 盒装CPU处理器 [【京东】][cpu]
 * 主板 : 微星（MSI)A88XM-E45 V2 [【京东】][masterboard]
@@ -14,7 +14,7 @@ menu = "main"
 * 显示器 : AOC I2260SWD 21.5英寸IPS广视角炫彩硬屏LED背光显示器 [【京东】][display]
 * 键鼠套装 : 罗技（Logitech）MK120 键鼠套装 黑色 [【京东】][input]
 
-### 价格
+#### 价格
 * CPU : ￥399 [【京东】][cpu]
 * 主板 :  ￥449 [【京东】][masterboard]
 * 内存 : ￥139 [【京东】][memory]
@@ -25,11 +25,9 @@ menu = "main"
 
 合计：￥2213.00
 
-### 京东截图
+#### 京东购物清单截图
 
-![](/images/post/20160126145500.png "京东购物清单截图")
-
-* 清单截图（[查看大图](/images/post/20160126145500.png "点击查看大图"))
+[![](/images/post/20160126145500.png)][jd]
 
 [cpu]: http://item.jd.com/1239472.html "AMD APU系列 A6-7400K 双核 R5核显 FM2+接口 盒装CPU处理器 ￥399"
 [masterboard]: http://item.jd.com/1029497.html "微星（MSI)A88XM-E45 V2 ￥449"
@@ -38,3 +36,4 @@ menu = "main"
 [box]: http://item.jd.com/878583.html "爱国者（aigo）魔武者D1 中塔机箱电源套装 黑色（标配250W电源/USB3.0）￥149"
 [display]: http://item.jd.com/1255209.html "AOC I2260SWD 21.5英寸IPS广视角炫彩硬屏LED背光显示器（黑色）￥639"
 [input]: http://item.jd.com/584300.html "罗技（Logitech）MK120 键鼠套装 黑色 ￥79"
+[jd]: /images/post/20160126145500.png "点击查看大图"
