--- a/content/post/art_201601051212.md
+++ b/content/post/art_201601051212.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160105091800.webp)
+[![图片加载中...请使用支持Webp的浏览器加速查看](/images/post/20160105091800.webp)](/images/post/20160105091801.jpg "点击查看大图")
 <!--more-->
-* 浪尽天涯（[查看大图](/images/post/20160105091801.webp "webp格式图片") &middot; [JPEG](/images/post/20160105091801.jpg "jpeg格式图片")）
+* 浪尽天涯（[查看大图](/images/post/20160105091801.webp "webp格式图片")）
