--- a/content/post/art_201601061212.md
+++ b/content/post/art_201601061212.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160106165800.webp)
+[![图片加载中...请使用支持Webp的浏览器加速查看](/images/post/20160106165800.webp)](/images/post/20160106161600.jpg "点击查看大图")
 <!--more-->
-* 雪中猎人（[查看大图](/images/post/20160106161600.webp "webp格式图片") &middot; [JPEG](/images/post/20160106161600.jpg "jpeg格式图片"))
+* 雪中猎人（[查看大图](/images/post/20160106161600.webp "webp格式图片"))
