--- a/content/post/art_201601071212.md
+++ b/content/post/art_201601071212.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-![请使用支持Webp的浏览器(最新版Chrome/FireFox)查看](/images/post/20160107165800.webp)
+[![图片加载中...请使用支持Webp的浏览器加速查看](/images/post/20160107165800.webp)](/images/post/20160107161300.png "点击查看大图")
 <!--more-->
-* 很喜欢这幅画（[查看大图](/images/post/20160107161300.webp "webp格式图片") &middot; [PNG](/images/post/20160107161300.png "png格式图片")）
+* 很喜欢这幅画（[查看大图](/images/post/20160107161300.webp "webp格式图片")）
