--- a/content/post/dev_201601131558.md
+++ b/content/post/dev_201601131558.md
@@ -12,14 +12,15 @@ categories = [
 menu = "Language"
 +++
 
-### &bull; What is Markdown?
+### &sect; What is Markdown?
 Markdown is a way to style text on the web. You control the display of the
 document; formatting words as bold or italic, adding images, and creating lists
 are just a few of the things we can do with Markdown. Mostly, Markdown is just
 regular text with a few non-alphabetic characters thrown in, like # or *.  
 [[Markdown Reference]][markdown] [[Mastering Markdown]][github markdown]
 <!--more-->
-### &bull; Syntax Cheatsheet:
+
+### &sect; Syntax Cheatsheet:
 
 * Phrase Emphasis
 
