--- a/content/post/art_201512301212.md
+++ b/content/post/art_201512301212.md
@@ -11,6 +11,6 @@ categories = [
 menu = "Art"
 +++
 
-[![图片加载中...请使用支持Webp的浏览器加速查看](/images/post/20151230121201.webp)]([JPEG](/images/post/20151230121200.jpg "点击查看大图"))
+[![图片加载中...请使用支持Webp的浏览器加速查看](/images/post/20151230121201.webp)]([JPEG](/images/post/20151230121200.jpg "点击查看大图")
 <!--more-->
 * 花开有季（[查看大图](/images/post/20151230121200.webp "webp格式图片")）
