--- a/content/post/etc_201404021221.md
+++ b/content/post/etc_201404021221.md
@@ -1,340 +1,206 @@
 +++
-title = "(Hu)go Template Primer"
+title = "客家习俗"
 description = ""
 tags = [
-    "go",
-    "golang",
-    "templates",
-    "themes",
-    "development",
+    "Other",
 ]
-date = "2014-04-02"
+date = "2016-02-01"
 categories = [
-    "Development",
-    "golang",
+    "Other",
 ]
-menu = "main"
+menu = "Other"
 +++
 
-Hugo uses the excellent [go](http://golang.org/) [html/template](http://golang.org/pkg/html/template/) library for
-its template engine. It is an extremely lightweight engine that provides a very
-small amount of logic. In our experience that it is just the right amount of
-logic to be able to create a good static website. If you have used other
-template systems from different languages or frameworks you will find a lot of
-similarities in go templates.
+[客家人]: https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&tn=baidu&wd=%E5%AE%A2%E5%AE%B6%E4%BA%BA&oq=%E5%AE%A2%E5%AE%B6%E4%BA%BA&rsv_pq=e920500800005141&rsv_t=e610oAaNKPlSpi7L3iFEog5KaXPzJwzEq5qS3j8RegQpcQvdRL2A20h6b7w&rsv_enter=0&rsv_sug7=000 (百度：客家人)
+
+
+[客家人][] 的习俗大致上包括全国性的传统岁序节俗，地方性崇拜、礼节等。
+
+#### 主要节日
+
+* __春节__：有拜年，游乐活动等，是最隆重的节日。
+* __立春__：即交春。
+* __元宵节__：正月十五是中国民间传统的元宵节。元宵节吃元宵，玩灯，赏灯，猜灯谜。
+* __二月二__：开正节。
+* __清明__：客家扫墓习俗多从春分开始，清明达到高潮。
+* __端午__：客家普遍称为五月节。节日主要内容是吃粽子，雄黄酒，龙舟赛。
+* __七月节__：也即鬼节。
+* __中秋__：民间通称八月节。吃月饼，赏月等风俗大体各地相同。
+* __重阳节__：客家人叫“九月节”。
+* __冬至__：客家人有“冬大过年”之说。
 <!--more-->
-This document is a brief primer on using go templates. The [go docs][gohtmltemplate]
-provide more details.
+#### 婚姻礼俗
 
-## Introduction to Go Templates
+* __说媒__       
+过去客家男女青年，十六岁以后就可托媒人说媒，介绍婚事。一般是由男家父母托媒去女家说，也有女家请媒人先访男家的。
 
-Go templates provide an extremely simple template language. It adheres to the
-belief that only the most basic of logic belongs in the template or view layer.
-One consequence of this simplicity is that go templates parse very quickly.
+* __看妹子__     
+男女两家通过央媒说合，如双方都有意，就约定时间“看妹子”。
 
-A unique characteristic of go templates is they are content aware. Variables and
-content will be sanitized depending on the context of where they are used. More
-details can be found in the [go docs][gohtmltemplate].
+* __写庚帖__    
+ 双方同意后，就要互告男女生辰八字。回去后，各请算命先生来“合八字”。如八字合得来，不会相冲相克，就写出庚贴（俗名婚单），各置于香案之上，如三天内无不祥之兆，这门亲事就定下来（如八字不合，男方要把女的庚贴送还女家）。
 
-## Basic Syntax
+* __编红单__   
+也称“开红婚帖”，或叫讲财礼。由男方父母，宗亲和媒人一起到女家，将男方要送给女家的财礼开具出来。红单中有的还要写上回婿礼品，如帽、银花、衣服、鞋、袜等。开红单过程中，双方会讨价还价，最后协商敲定。红单开完后，男女双方还要交换信物如戒指、手帕等。最后男方来人在女家吃完中饭回去。 定亲也叫“行大礼”，即再次正式把婚事确定下来。男青年及其父母等要去女家，送去猪头、鱼、肉等，女方父母、哥嫂、叔伯、外祖父母等都要出场。吃完中饭后，女孩子要出来见面，称男家父母为爸妈，两家父母相互称亲家、亲家母。
 
-Go lang templates are html files with the addition of variables and
-functions.
+* __看家门__    
+即女方到男方去看家庭，时间有的在“行大礼”前，有的在“大礼”后，女方去的人除女孩子及其父母亲外，姑嫂、姐妹等都要去，大大小小十几人，不带礼品，就是带一点，男家也不敢接。
 
-**Go variables and functions are accessible within {{ }}**
+* __送日子__    
+婚事定下以后，男方要请算命先生择定过门日子，包括新娘出门的日子、时辰，到男家后归门的时辰，此外女方裁红衣、男方铺床的日子也要同时择定。
 
-Accessing a predefined variable "foo":
+* __送菜和抬嫁妆__    
+新娘过门前一、二天，男家要请宗亲将红单规定的聘礼和鱼、肉、禽、面条等物，由十多人送到女家，回来时就把妆奁、家俱等带回男家。
 
-    {{ foo }}
+* __迎亲__   
+也叫___接亲___或___过门___。  
+ __婚期前一天__ ，男家要去十多人到女家接亲，有鼓手乐队，有放鞭炮的，有抬花轿的，有烧香的（要到女方的祠堂、庙宇、社公烧香），一个挑担的，一头挑带路鸡（一公一母），另一头是酒和松明，一个女的要带上新娘穿的衣服，还有扛木箧的二人，要扛去鱼、肉、酒、糕饼、香烟、鞭炮、蜡烛等物，媒人也要去，新郎有的去，有的不去，如新郎同去，新郎也要做轿，放鞭炮的是男方的全权代表，随带红包一、二十个。接亲的人到女家后，先吃点心，然后由女家二人带着到祠堂烧香敬祖。女家在中午或晚上，要设宴请客。  
+__新娘动身__ 一般是在半夜子时或卯时，越走天越亮，象征走向光明，再是晚上出门，也不会碰到抬棺材等不吉利的事。迎亲队伍前面是打灯笼的，接着是吹鼓手，花轿在中间，后面是接亲的人。   
+__新娘到达男家__，如还不到所规定的入门时辰，就要在大门口坪上或在门外旁边房子等候。入门一般是早上七、八点或八、九点，有的甚至要等到中午。到了入门时辰，新娘要踢轿门，由男方的伴娘将新娘牵出轿，然后在大门口“过火堆”，新娘从用杉树枝烧起的火堆上跨过，才进大门。
 
-**Parameters are separated using spaces**
+* __拜堂__   
+新娘在鼓乐声中进到大厅以后，就开始拜堂。  
+大厅摆设香案，东边站父母、长辈，西边站外戚，北边站房亲，南边站小辈。   
+__拜堂前__，外家要给新郎挂红，用五尺长的红布披在新郎身上。口念：“手拿幡红五尺长，一心拿来扮新郎，扮得新郎生贵子，早生贵子中个状元郎。”   
+__拜堂时__，新郎站左，新娘站右，由礼生叫：一拜天地，二拜祖先，三拜高堂，四夫妻对拜。  
+__最后是亲戚见面__，要给新娘红包。   
+__拜堂毕__，伴娘用红罗将新娘牵进新房，新郎新娘在鞭炮声中从房门口向大厅撒喜糖。然后新郎新娘吃交杯酒。伴娘用托盘捧上一只鸡，边端酒边讲：“团团圆圆，璧合珠联”，“观音送子，早生贵子”；“夫妻和好，白头到老”。（此礼仪在梅州地区亦已不常见，被现代婚礼模式取代）   
+__中午办酒席，吃婚宴__，用高声地炮邀客，每半小时放一次，酒席开始入席时放三响。接着由礼生报名单，一桌二个上席，按辈份和亲疏，先安排上席就坐，然后其他人随便入席。男女宾客分开就席，新郎新娘要到席上敬酒。
 
-Calling the add function with input of 1, 2:
+* __闹房__  
+闹房一种在大厅闹，一种在新房闹，也有先在大厅闹，后到新房闹。闹房期间，鞭炮隔几分钟放一次，一直闹到午夜方停。
 
-    {{ add 1 2 }}
+* __回门__   
+也叫“转门”。一般是婚后第三天或第五天，由女方派新娘的姐妹等女眷来请新郎新娘一起去做客，媒人及新郎姐妹也同去，共7-14人，吃罢午宴，当天回来。
 
-**Methods and fields are accessed via dot notation**
+* __送满月__  
+结婚后一个月，新娘娘家要来送满月，同时送来小鸡、蔬菜、种子、谷种、豆子等，示意五谷丰登，财丁兴旺。
 
-Accessing the Page Parameter "bar"
+#### 传统喜庆习俗
 
-    {{ .Params.bar }}
+1. __诞生礼仪__   
+  标志着一个人出生的庆贺和祝福，是人生中的开端礼仪。
 
-**Parentheses can be used to group items together**
+  * _催生_  
+    出嫁女儿怀孕快分娩时，一般是婴儿出生前一、二十天，娘家要带着鸡、鸡蛋、面条、粉干等来到女儿家“催生”，有预祝平安出生之意。如母亲已不在，则由嫂子去催生，中午要设宴招待。  
+    小孩出生后，女婿要带着鸡、蛋、米酒（有的带几十斤）到岳家去报喜，外婆家要请客，至亲友好都会来参加，以表示祝贺。外公、外婆会回赠鸡和红蛋。
+  * _做三朝_  
+    小孩出生三天，要做“三朝”。先给小孩洗澡，请接生婆吃饭。外婆会送来大公鸡、鸡蛋、面条、糯米粉等。要做“三朝酒”，宴请外婆及亲房。有些地方还要给至亲亲友送红蛋，亲友在满月前会回送鸡、鸡蛋、面条等物。
+    * _做满月_   
+    婴儿出生一个月，要做“满月”，外婆会送来大公鸡（很多地方送大阉鸡）、鸡蛋，还会送来婴儿穿用的衣服、小被、帽子、项圈、风衣、裙、银手镯和背带等，舅舅、舅母、姨姨等女家亲戚，一般都送小母鸡、鸡蛋、衣服、布料等，姑姑、叔伯等男家亲房也会来庆贺。
+    * _百岁_   
+     小孩出生100天，也要庆贺。这一天，外公和女家的伯叔会拿公鸡来庆贺，其他亲属一般都要给婴孩送红包。
+    * 做周岁   
+     孩子出生一周岁，要做“周”，庆贺孩子“得周”。周岁比满月更为隆重，来庆贺的客人也更多。
 
-    {{ if or (isset .Params "alt") (isset .Params "caption") }} Caption {{ end }}
+2. __成年礼仪__   
+    客家的成年礼仪分男、女两种，男子的成年礼仪叫做“冠礼”，女子的成年礼仪叫做“笄礼”。 （现在很多地方好像已经无此礼仪，至少在我所在地没有了）。
 
+3. __寿诞礼仪__
 
-## Variables
+    * _做生日_   
+      客家人与各地的习俗一样，每年做一次小生日，十年做一次大生日，但以做大生日较为普遍。从十岁“启十”起，一直做到四十或五十岁，到了六十以上，可称为祝寿。做生日要吃寿面和荷包蛋，示意长寿百岁。 （此习俗亦已简化，只做大寿：六十岁以上）
 
-Each go template has a struct (object) made available to it. In hugo each
-template is passed either a page or a node struct depending on which type of
-page you are rendering. More details are available on the
-[variables](/layout/variables) page.
+    * _祝寿_   
+    祝寿时，出嫁的女儿要送来大公鸡，还要送寿衣、寿帽、寿饼、寿鞋、寿袜，从头到脚一整套，父亲做寿，同时也要给母亲送上一整套，此外还要送来寿轴、喜炮、寿烛、公鸡以及寿桃、寿面、寿饼、寿酒、寿肉等。其他人来祝寿，一般亲友送寿幛、寿联，或者再加上送礼金。
+    不少地方，七十岁以上高龄、子孙多、家境较好的老人祝寿，要举行拜寿仪式。
+    客家人生日和祝寿，是知情人自行送礼，上门祝贺，先贺后请；除内亲、至交有发请帖外，不贺不请。
 
-A variable is accessed by referencing the variable name.
+    * _建房迁新居_  
+      客家人把建房和乔迁新居亦视为重大喜庆之一，要进行隆重庆贺。  
+      __建房时__，房屋定位，房门定向都要请堪舆先生测定，竖柱上梁时，要张灯结彩，贴红联。   
+      __新房建成后__，要在入宅的前一天晚上，进行“驱邪”、“除煞”，然后才能迁入居住。  
+      __迁入新居时__，要随带灯笼（或油灯）、火笼、秤等进屋，还要带一窝小鸡，蒸一甑饭捧进新屋，以示新丁兴旺，喜气盈庭。迁新居要办“入宅酒”，宴请亲友和建屋工匠及帮工等。菜肴中要有韭菜、豆腐、猪肠、猪血和米糕等，示意长长久久，发财高升。
 
-    <title>{{ .Title }}</title>
 
-Variables can also be defined and referenced.
+#### 传统岁时习俗
 
-    {{ $address := "123 Main St."}}
-    {{ $address }}
+* __过年__  
+“百节年为首”，客家人与全国全省多数地方一样，视过年为一年中最为隆重和欢乐的节日。人们很早就开始准备过年。九、十月开始晒番薯片、米糕片供过年油炸和炒食。“冬至”一到，开始蒸酒。年近三十日，家家户户要蒸糖糕、做米果、杀猪、做豆腐、宰鸡等，欢欢喜喜迎接新年到来。
 
+* __祭灶__   
+十二月二十三日祭灶，二十三日晚后要把灶台刷干净，把旧的灶君取下烧掉，三十日晨把新像贴上，一送一迎，都要摆置酒肉、糖果、甘蔗、米果等，在灶前烧香、点烛、放纸炮。
 
-## Functions
+* __入年界__   
+农历十二月二十五日，入“年界”，加紧准备过年，外出的人都要赶回家过年。入年界限后，要教育小孩不能相骂，不能讲不吉利的话。在入年界前后，要择定吉日在屋内扫尘，打扫卫生。要清洗厨桌板凳，洗晒被褥蚊帐，干干净净过年。
 
-Go template ship with a few functions which provide basic functionality. The go
-template system also provides a mechanism for applications to extend the
-available functions with their own. [Hugo template
-functions](/layout/functions) provide some additional functionality we believe
-are useful for building websites. Functions are called by using their name
-followed by the required parameters separated by spaces. Template
-functions cannot be added without recompiling hugo.
+* __过大年__  
+大年三十，也就是除夕，是过年气氛最为热烈、最为欢乐愉快的一日。这天上午，家家户户要拜菩萨、敬神。大年三十，各家厅堂要挂起祖宗画像，在大门口贴上鲜红春联，谷仓门上、禽畜栏前、家俱床铺以及水缸边都要贴上红纸条，叫做“封岁”，也叫“上红”。大人小孩都要洗澡，穿上新衣，干干净净过年。各家厅堂还要陈设供桌，布置香案，摆起鸡、鱼、肉、果品等，敬奉祖先。
+除夕晚上，吃团圆饭，菜肴丰盛。桌上要多放几副碗筷，以示请祖先回来一起过年。饭前，要先给祖先筛酒，将酒洒地，然后开始吃饭。席间，老人小孩吃鸡腿，以示尊老敬幼。
 
-**Example:**
+* __守岁__  
+吃罢团圆饭，灶具要洗得干干净净，以备正月初一早上或全天吃素。晚上要守岁，辞旧岁，迎新春，每个房间要整夜灯火通明，叫“点岁火”，有些地方牛栏、猪舍也要点上灯。家长要给小孩发压岁钱，有些地方还要给老人压岁钱。
 
-    {{ add 1 2 }}
+* __开大门__   
+正月初一按《通书》规定的吉利时辰开大门，顿时鞭炮声此起彼伏，响彻云霄。
 
-## Includes
+* __拜年__  
+__正月初一__早上吃素。饭后人们相互拜年以吉利话相颂。小孩们穿着新衣，欢乐嘻戏，有的争向年长者拜年：“公公叔叔家发财，糖子饼果拿给涯（我）。”  
+__正月初二__，走亲戚拜年。特别是新婚女婿（岳家会用书贴来请）要去岳父母家中拜年。一般小俩口一起去，也有只女婿一人去；有的当天回来，也有住五、六天的。去时要带小母鸡、米果、糖果和香烛、鞭炮等，到时要在岳家祖先灵前烧香、点烛、放鞭炮。中午岳家请客，女婿要喝醉，不醉不热情。
 
-When including another template you will pass to it the data it will be
-able to access. To pass along the current context please remember to
-include a trailing dot. The templates location will always be starting at
-the /layout/ directory within Hugo.
+* __吃岁饭__  
+__初三__早上吃“岁饭”（有的年前廿九日晚上蒸好，有的正月初二晚上蒸好），饭上插上筷子，家中有几个人就插几双，再插上一根带叶树枝，有的还要放上桔、柚等水果。吃岁饭前先要把饭摆在“当天”神位上，供奉天神和祖先。吃岁饭要准备很多菜，有鸡有肉，与大年三十吃团圆饭差不多。初三不能杀生，鸡要在初二杀好或过年时留下。
 
-**Example:**
+* __出年界__  
+__正月初五__，出年界。厅堂的祖宗画像要收起，纸门帘要取下烧掉，外出做工干活的就可以启程了。
 
-    {{ template "chrome/header.html" . }}
+* __元宵节__  
+__正月十五日元宵节__，又叫“上元节”，家家户户要筹办菜肴，喝酒过年。要闹元宵，新春游乐活动到达高潮。从过年开始到正月十五，各地游乐活动不断，以游龙灯、舞狮为多，有的从正月初一、二起开始活动。龙灯和狮队来到前，会预先发贴，来后要给他们送红包、吃点心。龙灯、狮队等除到各家各户表演外，还要到村中各庙宇和祠堂向神灵及祖先拜年。逢到春节后的第一个墟期，各路龙灯、船灯、狮灯等都要到集上表演，叫做“开墟”。春节到元宵期间，各地还有以下一些游乐活动：
 
+* __送春牛__  
+一般在年初一，由三、五人组成一个小队，向各户送春牛图，有吹唢呐的，打小鼓的，敲小钹的，在每家门口吹打，送上“恭贺新禧”红贴，主人会给红包。
 
-## Logic
+* __稻草龙__  
+一截一截，插满香火，由小孩抬着到各户灶前和猪舍牛栏去舞，祝贺合家平安、六畜兴旺，各户要给红包，小孩得欢乐，主人求吉利。
 
-Go templates provide the most basic iteration and conditional logic.
+* __蝙蝠灯__  
+也由小孩逐户去舞，“火龙进屋，要你蜡烛”，“恭喜发财，买田建屋”，蝙蝠灯不收红包，只要蜡烛。
 
-### Iteration
+* __船灯__  
+灯状似船，在陆地表演游唱。春节前排练，锣鼓队，奏十番配合。到村以后，吃罢点心，在开阔场地表演，由船夫、艘婆唱“十月怀胎”、“十二月古人”、“瓜子仁”、“一枝花”等曲调，艘公只管划船不唱曲。晚上要在祠堂“开天官”，唱“天官赐福”等，最后喝酒吃饭。
 
-Just like in go, the go templates make heavy use of range to iterate over
-a map, array or slice. The following are different examples of how to use
-range.
+* __狮灯__  
+有傩人出场，一个狮头，一个狮尾，一个孙猴子，一个沙和尚，还有锣鼓队。狮、猴、沙和尚演唱完后，要进行武术表演，打拳、舞刀、耍棍、跳桌。狮队过年前要请师傅教练武术。
 
-**Example 1: Using Context**
+* __春分__  
+二月春分，开始扫墓祭祖，也叫“春祭”。扫墓前先要在祠堂举行隆重的祭祖仪式，杀猪、宰羊，请鼓手吹奏，由礼生念祭文，带引行三献礼。春分扫墓开始时，首先扫祭开基祖和远祖坟墓，全族和全村都要出动，规模很大，队伍往往达几百甚至上千人。开基祖和远祖墓扫完之后，然后分房扫祭各房祖先坟墓，最后各家扫祭家庭私墓。大部分客家地区春季祭祖扫墓，都从春分或更早一些时候开始，最迟清明要扫完。各地有一种说法，谓清明后墓门就关闭，祖先英灵就受用不到了。
 
-    {{ range array }}
-        {{ . }}
-    {{ end }}
+* __清明__  
+三月清明，祭拜祖先。客家地区除大部分是春分扫墓祭祖外，也有一些地方是清明扫墓的。清明节这一天，也有一些地方要祭路旁土地伯公等神坛的。
 
-**Example 2: Declaring value variable name**
+* __端午节__  
+五月初五为端午节，家家户户买肉、杀鸭、包粽子、做米果过节。端午是个大节，许多地方在外面做工的都会回家过节。
 
-    {{range $element := array}}
-        {{ $element }}
-    {{ end }}
+* __中元节__  
+客家地区多以七月十五为“鬼节”。有些地方都要提早一天过节，谓“七月十四人过节，七月十五鬼过节”。有些地方，客家也在七月半祭祖。
 
-**Example 2: Declaring key and value variable name**
+* __中秋节__   
+八月十五中秋节，俗称“八月节”，也是个大节。吃月饼，赏月，庆团圆。各家各户要置办酒菜，买猪肉、宰鸡鸭、做米果过节。中秋晚上，家人团聚过节，饭后吃月饼赏月。
 
-    {{range $index, $element := array}}
-        {{ $index }}
-        {{ $element }}
-    {{ end }}
+* __重阳节__   
+九月初九日为重阳节，也叫重九节，俗称“九月节”，是年尾大节，有“过了重阳无大节”之说，出门的人很多都要赶回家过节。这一天，很多地方人们要带着小孩登高爬山，有的在高山上放风筝，谓可避邪、避瘟疫。很多老人都说，此俗系祖先从北方中原带来，代代相传至今。这一天，有些老人和妇女则上山到庵庙烧香拜佛。
 
-### Conditionals
+* __冬至__  
+冬至在农历十一月，也叫“过冬年”。过冬至要吃猪肉、牛肉，做米果、煮汤丸，有钱人要吃鹿茸、人参补冬。
 
-If, else, with, or, & and provide the framework for handling conditional
-logic in Go Templates. Like range, each statement is closed with `end`.
+#### 客家酒俗
 
+客家人十分好客，每当亲朋戚友到来，他们都喜欢以家酿米酒相待，这种米酒又称“水酒”，如是初开坛提取的酒，称之为“酒娘”。这种“酒娘”好喝，度数虽然不高，但后劲大，容易醉人。他们在喝酒时，很注意礼节。
 
-Go Templates treat the following values as false:
+客家人喜欢使用四方桌，俗称“八仙桌”，一种可供八个人同坐的木头桌。上座时，他们很重视席位的安排，一般按亲朋戚友的尊卑入席就座。宴席间的大小位，是这样安排的，如正厅只排有一张桌子，这时以面对大门的左侧为首位，右侧为第二位。然后从左到右，穿插论序，面对正厅的右侧为最小。如果安排二张桌子，这时候以左边桌位为大，右边为小，席位大小也是穿插而行。如果安排三桌，称之为“一品席”，这种情况，以首席为尊。如果安排五桌，一般要排成“梅花席”。
 
-* false
-* 0
-* any array, slice, map, or string of length zero
+宴席间第一回斟酒（亦称筛酒），是按尊卑长幼次序先后斟酒，最后再给自己斟酒。酒斟好后，酒壶嘴不能对客人，要对着自己，否则就是失礼。敬酒时，敬酒者要站起来，左手摁胸（表示尊敬和诚意），右手举杯讲几句祝颂的吉祥语，并且要先喝表示敬意。有人迟到，视不同情况罚酒1-3杯，妇女半杯。如中途退席，要喝1-3杯，才能离席。
 
-**Example 1: If**
+客家人喝酒时，为了增添酒兴和热闹气氛，在各种宴会场合，或俗、或雅、或简、或繁，都有猜拳助兴的习俗。猜拳时还有一些规则，比如出三时，不能拇指、中指、食指一起出。出一时，大拇指要侧向，不能往上翘。出二时，如使用大拇指、食指表示，出手时要侧向，不能象灯驳壳枪一样食指指向对方，以表示礼貌。
 
-    {{ if isset .Params "title" }}<h4>{{ index .Params "title" }}</h4>{{ end }}
+客家人酒令，具有丰富的知识性。猜拳的数字从零到拾，如猜中双方所出的手指合计数，即为胜方。如双方同时猜中或均未猜中，也有采取“四字式”叫法，比如猜“一”时叫“一品高升”；猜“二”时，叫“两家和好”；猜“三”时叫“三星高照”；猜“四”时叫“四季发财”；猜“五”时叫“五子登科”；猜“六”时叫“六六顺心”；猜“七”时叫“七巧成图”；猜“八”时叫“八仙庆寿”；猜“九”时叫“九久长长”；猜“十”时叫“十全十美”。所以喊的就是吉祥语。
 
-**Example 2: If -> Else**
+喝酒猜拳时，一般以三杯酒为一组，输拳者喝酒，三杯酒喝完就算过关。如余兴未了，可再来一组或几组。如需请人代拳、代酒，应和对方协商，，征得对方同意才行。除了猜拳斗酒外，还有出手指点数字斗酒，做法是席间指定一人为首，按大家所出手指的总数，算到谁，谁就得喝一杯，例如大家所出手指是六，从为首者算起，到第六位即为喝酒者。另外也有“转汤匙”斗酒的，桌中摆一个汤匙，由一人旋转汤匙，待汤匙停止转动时，汤匙柄指向谁，谁就得喝一杯。除外还有“猜单双”斗酒的，在手心中任意放入一枚或两枚硬币，让别人猜单、双，输者喝酒。
 
-    {{ if isset .Params "alt" }}
-        {{ index .Params "alt" }}
-    {{else}}
-        {{ index .Params "caption" }}
-    {{ end }}
+客家人酒令花样多，有文化的人还喜欢“字词令”（包括地方特产令、农谚令等）、“诗词令”，此外还有“通令”（多是别出心裁，涉及意趣，令人忍俊不禁。），包括猜谜等。客家人喜欢通过酒规酒令、这一群众喜闻乐见的娱乐游戏，增添酒兴，消除寂寞困倦，直至尽欢尽醉。
 
-**Example 3: And & Or**
+#### 民间娱乐
+客家民间娱乐内容非常丰富，节日的主要有秧歌、龙舟竞渡、踩船灯，舞龙灯，舞狮，高脚师，迎花灯，踩马灯，打花鼓，乐器会，演戏，放烟火，平时的有唱山歌，唱小曲，弹琴，弹筝，拉二胡，吹笛子，下象棋，下六子棋，打纸牌，掷状元签，打麻将，养花，钓鱼等。
 
-    {{ if and (or (isset .Params "title") (isset .Params "caption")) (isset .Params "attr")}}
-
-**Example 4: With**
-
-An alternative way of writing "if" and then referencing the same value
-is to use "with" instead. With rebinds the context `.` within its scope,
-and skips the block if the variable is absent.
-
-The first example above could be simplified as:
-
-    {{ with .Params.title }}<h4>{{ . }}</h4>{{ end }}
-
-**Example 5: If -> Else If**
-
-    {{ if isset .Params "alt" }}
-        {{ index .Params "alt" }}
-    {{ else if isset .Params "caption" }}
-        {{ index .Params "caption" }}
-    {{ end }}
-
-## Pipes
-
-One of the most powerful components of go templates is the ability to
-stack actions one after another. This is done by using pipes. Borrowed
-from unix pipes, the concept is simple, each pipeline's output becomes the
-input of the following pipe.
-
-Because of the very simple syntax of go templates, the pipe is essential
-to being able to chain together function calls. One limitation of the
-pipes is that they only can work with a single value and that value
-becomes the last parameter of the next pipeline.
-
-A few simple examples should help convey how to use the pipe.
-
-**Example 1 :**
-
-    {{ if eq 1 1 }} Same {{ end }}
-
-is the same as
-
-    {{ eq 1 1 | if }} Same {{ end }}
-
-It does look odd to place the if at the end, but it does provide a good
-illustration of how to use the pipes.
-
-**Example 2 :**
-
-    {{ index .Params "disqus_url" | html }}
-
-Access the page parameter called "disqus_url" and escape the HTML.
-
-**Example 3 :**
-
-    {{ if or (or (isset .Params "title") (isset .Params "caption")) (isset .Params "attr")}}
-    Stuff Here
-    {{ end }}
-
-Could be rewritten as
-
-    {{  isset .Params "caption" | or isset .Params "title" | or isset .Params "attr" | if }}
-    Stuff Here
-    {{ end }}
-
-
-## Context (aka. the dot)
-
-The most easily overlooked concept to understand about go templates is that {{ . }}
-always refers to the current context. In the top level of your template this
-will be the data set made available to it. Inside of a iteration it will have
-the value of the current item. When inside of a loop the context has changed. .
-will no longer refer to the data available to the entire page. If you need to
-access this from within the loop you will likely want to set it to a variable
-instead of depending on the context.
-
-**Example:**
-
-      {{ $title := .Site.Title }}
-      {{ range .Params.tags }}
-        <li> <a href="{{ $baseurl }}/tags/{{ . | urlize }}">{{ . }}</a> - {{ $title }} </li>
-      {{ end }}
-
-Notice how once we have entered the loop the value of {{ . }} has changed. We
-have defined a variable outside of the loop so we have access to it from within
-the loop.
-
-# Hugo Parameters
-
-Hugo provides the option of passing values to the template language
-through the site configuration (for sitewide values), or through the meta
-data of each specific piece of content. You can define any values of any
-type (supported by your front matter/config format) and use them however
-you want to inside of your templates.
-
-
-## Using Content (page) Parameters
-
-In each piece of content you can provide variables to be used by the
-templates. This happens in the [front matter](/content/front-matter).
-
-An example of this is used in this documentation site. Most of the pages
-benefit from having the table of contents provided. Sometimes the TOC just
-doesn't make a lot of sense. We've defined a variable in our front matter
-of some pages to turn off the TOC from being displayed.
-
-Here is the example front matter:
-
-```
 ---
-title: "Permalinks"
-date: "2013-11-18"
-aliases:
-  - "/doc/permalinks/"
-groups: ["extras"]
-groups_weight: 30
-notoc: true
----
-```
-
-Here is the corresponding code inside of the template:
-
-      {{ if not .Params.notoc }}
-        <div id="toc" class="well col-md-4 col-sm-6">
-        {{ .TableOfContents }}
-        </div>
-      {{ end }}
-
-
-
-## Using Site (config) Parameters
-In your top-level configuration file (eg, `config.yaml`) you can define site
-parameters, which are values which will be available to you in chrome.
-
-For instance, you might declare:
-
-```yaml
-params:
-  CopyrightHTML: "Copyright &#xA9; 2013 John Doe. All Rights Reserved."
-  TwitterUser: "spf13"
-  SidebarRecentLimit: 5
-```
-
-Within a footer layout, you might then declare a `<footer>` which is only
-provided if the `CopyrightHTML` parameter is provided, and if it is given,
-you would declare it to be HTML-safe, so that the HTML entity is not escaped
-again.  This would let you easily update just your top-level config file each
-January 1st, instead of hunting through your templates.
-
-```
-{{if .Site.Params.CopyrightHTML}}<footer>
-<div class="text-center">{{.Site.Params.CopyrightHTML | safeHtml}}</div>
-</footer>{{end}}
-```
-
-An alternative way of writing the "if" and then referencing the same value
-is to use "with" instead. With rebinds the context `.` within its scope,
-and skips the block if the variable is absent:
-
-```
-{{with .Site.Params.TwitterUser}}<span class="twitter">
-<a href="https://twitter.com/{{.}}" rel="author">
-<img src="/images/twitter.png" width="48" height="48" title="Twitter: {{.}}"
- alt="Twitter"></a>
-</span>{{end}}
-```
-
-Finally, if you want to pull "magic constants" out of your layouts, you can do
-so, such as in this example:
-
-```
-<nav class="recent">
-  <h1>Recent Posts</h1>
-  <ul>{{range first .Site.Params.SidebarRecentLimit .Site.Recent}}
-    <li><a href="{{.RelPermalink}}">{{.Title}}</a></li>
-  {{end}}</ul>
-</nav>
-```
+（资料整理自网络，仅供参考）
