--- a/content/post/dev_201603032011.md
+++ b/content/post/dev_201603032011.md
@@ -11,7 +11,7 @@ categories = [
 menu = "Development"
 +++
 
-This page provides a tutorial that will prepare users for using XML serialization. Before this tutorial is attempted it is advisable to have a look at the Javadoc documentation for the framework. Although there are only several annotations and objects involved in the serialization process the framework itself has many powerful features which this tutorial attempts to describe.
+This page provides a tutorial that will prepare users for using XML serialization. Before this tutorial is attempted it is advisable to have a look at the [Javadoc](http://simple.sourceforge.net/download/stream/doc/javadoc/) documentation for the framework. Although there are only several annotations and objects involved in the serialization process the framework itself has many powerful features which this tutorial attempts to describe.
 <!--more-->
 1. [Serializing a simple object](#1)
 2. [Deserializing a simple object](#2)
