--- a/content/post/dev_201603032011.md
+++ b/content/post/dev_201603032011.md
@@ -1,6 +1,6 @@
 
 +++
-title = "SimpleXML  tutorial"
+title = "SimpleXML: Tutorial"
 tags = [
     "development",
 ]
@@ -674,7 +674,7 @@ For the above object both primitive arrays require an entry attribute, this is b
       <int>42</int>
       <int>31</int>
    </ages>
-</properties>
+</addressBook>
 ```
 
 Looking at the above XML it can be seen that each entity within an array index is named the same as its type. So a string is wrapped in a 'string' element and an int is wrapped in an 'int' element. This is done because the default name for the ElementArray annotation is its type name, unless the Root annotation is used with a name. This can be overridden by providing an explicit entry name for the array. For example take the simple object below which contains an array of names as string objects.
@@ -888,7 +888,7 @@ An important feature for any XML tool is the ability to sift through the source 
       <mobile>123456789</mobile>
       <home>987654321</home>
    </phone>
-</example>
+</contact>
 ```
 If my object only required the some of the details of the specified contact, for example the phone contacts and the name then it needs to be able to ignore the address details safely. The following code shows how this can be done by setting strict to false within the Root annotation.
 
@@ -2649,4 +2649,4 @@ For the above set of annotated classes a list of operations can be defined in an
 
 ------------------
 
-(Note: This article’s original links is [here](http://simple.sourceforge.net/download/stream/doc/tutorial/tutorial.php) )
+(Note: This article’s original links is [*here*](http://simple.sourceforge.net/download/stream/doc/tutorial/tutorial.php "SimpleXML Tutorial") )
