--- a/content/post/dev_201603081355.md
+++ b/content/post/dev_201603081355.md
@@ -3,6 +3,7 @@
 title = "Xstream: Introduction"
 tags = [
     "development",
+    "XML",
 ]
 date = "2016-03-08T13:58:00+08:00"
 categories = [
@@ -53,10 +54,10 @@ We hope this tutorials help you in your work and we would appreciate if you coul
 [XML to Java]: /post/dev_201603081427 (XML to Java)
 [Java to XML]: /post/dev_201603081433 (Java to XML)
 [Java to XML Using Annotation]: /post/dev_201603081441 (Java to XML Usging Annotation)
-[Handling Attributes in XML]: / (Handling Attributes in XML)
-[Referencing Objects]: / (Referencing Objects)
-[Custom Converter for BufferedImage]: / (Custom Converter for BufferedImage)
-[Basic Built-in Converters]: / (Basic Built-in Converters)
-[Collection Converters]: / (Collection Converters)
-[Json to Java]: / (Json to Java)
-[XML Transformation]: / (XML Transformation)
+[Handling Attributes in XML]: /post/dev_201603092041 (Handling Attributes in XML)
+[Referencing Objects]: /post/dev_201603092051 (Referencing Objects)
+[Custom Converter for BufferedImage]: /post/dev_201603092055 (Custom Converter for BufferedImage)
+[Basic Built-in Converters]: /post/dev_201603092100 (Basic Built-in Converters)
+[Collection Converters]: /post/dev_201603092105 (Collection Converters)
+[Json to Java]: /post/dev_201603092115 (Json to Java)
+[XML Transformation]: /post/dev_201603092120 (XML Transformation)
