--- a/content/post/dev_201603081411.md
+++ b/content/post/dev_201603081411.md
@@ -3,6 +3,7 @@
 title = "XStream: Java to XML and Back"
 tags = [
     "development",
+    "XML",
 ]
 date = "2016-03-08T14:11:00+08:00"
 categories = [
