--- a/content/post/dev_201603032011.md
+++ b/content/post/dev_201603032011.md
@@ -3,10 +3,12 @@
 title = "SimpleXML: Tutorial"
 tags = [
     "development",
+    "XML"
 ]
 date = "2016-03-03T20:11:00+08:00"
 categories = [
     "Development",
+    "Transport",
 ]
 menu = "Development"
 +++
