--- a/content/post/dev_201603081313.md
+++ b/content/post/dev_201603081313.md
@@ -3,10 +3,12 @@
 title = "SimpleXML: Example"
 tags = [
     "development",
+    "XML"
 ]
 date = "2016-03-08T13:13:00+08:00"
 categories = [
     "Development",
+    "Transport",
 ]
 menu = "Development"
 +++
