--- a/content/post/dev_201603182045.md
+++ b/content/post/dev_201603182045.md
@@ -31,8 +31,7 @@ This post covers Go 1.5 and below.
 7. [Accidental Variable Shadowing](#7)
 8. [Can't Use "nil" to Initialize a Variable Without an Explicit Type](#8)
 9. [Using "nil" Slices and Maps](#9)
-<!--more-->
-10. [Map Capacity](#10)
+10. [Map Capacity](#10)<!--more-->
 11. [Strings Can't Be "nil"](#11)
 12. [Array Function Arguments](#12)
 13. [Unexpected Values in Slice and Array "range" Clauses](#13)
