--- a/content/post/inf_201603182105.md
+++ b/content/post/inf_201603182105.md
@@ -14,7 +14,7 @@ menu = "Infomation"
 一个网站https://libskia.so/, 然后顺便浏览了一下，做的还是很有吸引力的个人网站。其中有一
 篇Blog： [Discovering Gogs](https://libskia.so/b/discovering-gogs.html)
 
-作者写道:   
+博主写道:   
 I just discovered Gogs, a light Git web fronted written in Go.
 After reading a bit on its website, I decided to try a bit, just
 for fun. It was really easy to install it with NginX as reverse
