--- a/content/post/dev_201803122215.md
+++ b/content/post/dev_201803122215.md
@@ -13,13 +13,13 @@ menu = "Development"
 
 
 
-[**HTTP 0.9** https://www.w3.org/Protocols/HTTP/AsImplemented.html ](https://www.w3.org/Protocols/HTTP/AsImplemented.html "HTTP 0.9")
+[**HTTP 0.9** https://www.w3.org/Protocols/HTTP/AsImplemented.html ](https://www.w3.org/Protocols/HTTP/AsImplemented.html "The Original HTTP as defined in 1991")
 
-[**HTTP 1.0** RFC https://www.ietf.org/rfc/rfc1945.txt ](https://tools.ietf.org/html/rfc1945 "HTTP 1.0")
+[**HTTP 1.0** RFC https://www.ietf.org/rfc/rfc1945.txt ](https://tools.ietf.org/html/rfc1945 "Hypertext Transfer Protocol -- HTTP/1.0")
 
-[**HTTP 1.1** RFC https://www.ietf.org/rfc/rfc2616.txt ](https://tools.ietf.org/html/rfc2616 "HTTP 1.1")
+[**HTTP 1.1** RFC https://www.ietf.org/rfc/rfc2616.txt ](https://tools.ietf.org/html/rfc2616 "Hypertext Transfer Protocol -- HTTP/1.1")
 
-[**HTTP 2.0** RFC https://www.ietf.org/rfc/rfc7540.txt ](https://tools.ietf.org/html/rfc7540 "HTTP 2.0")
+[**HTTP 2.0** RFC https://www.ietf.org/rfc/rfc7540.txt ](https://tools.ietf.org/html/rfc7540 "Hypertext Transfer Protocol Version 2 -- HTTP/2")
 
 <!--more-->
 
