--- a/content/post/dev_201803241012.md
+++ b/content/post/dev_201803241012.md
@@ -1910,4 +1910,4 @@ INTERNAL OPTIONS
 
  ------------------
 
-(Note: 本文转载于 [*这里*](http://www.cnblogs.com/f-ck-need-u/p/7221713.html "man rsync翻译(rsync命令中文手册") )
+(Note: 本文转载自 [*这里*](http://www.cnblogs.com/f-ck-need-u/p/7221713.html "man rsync翻译(rsync命令中文手册") )
