--- a/content/post/dev_201803241218.md
+++ b/content/post/dev_201803241218.md
@@ -624,4 +624,4 @@ Password:
 
  ------------------
 
-(Note: 本文转载字 [*这里*](https://www.cnblogs.com/f-ck-need-u/p/7220009.html "rsync基本命令和用法") )
+(Note: 本文转载自 [*这里*](https://www.cnblogs.com/f-ck-need-u/p/7220009.html "rsync基本命令和用法") )
