--- a/content/post/info_201805210818.md
+++ b/content/post/info_201805210818.md
@@ -16,5 +16,6 @@ menu = "Information"
 * [官方中文文档](https://kubernetes.io/cn/docs/ "官方中文文档")
 * [Kubernetes指南](https://kubernetes.feisky.xyz/zh/ "feisky版 Kubernetes指南")
 * [Kubernetes指南](https://jimmysong.io/kubernetes-handbook/ "Jimmy版 Kubernetes指南")
+* [SDN指南](https://feisky.gitbooks.io/sdn/ "SDN指南")
 
 <!--more-->
