--- a/content/post/dev_201806301842.md
+++ b/content/post/dev_201806301842.md
@@ -25,7 +25,7 @@ Or
 ```
 FROM <image>[@<digest>] [AS <name>]
 ```
-* Optionally a name can be given to a new build stage by adding AS name to the FROM instruction. The name can be used in subsequent FROM and COPY --from=<name|index> instructions to refer to the image built in this stage.
+* Optionally a name can be given to a new build stage by adding `AS` name to the `FROM` instruction. The name can be used in subsequent `FROM` and `COPY --from=<name|index>` instructions to refer to the image built in this stage.
 
 Find Docker-ce official document [here](https://docs.docker.com/v17.06/engine/reference/builder/#from 'Docker official Document').
 
