--- a/content/post/dev_201807012219.md
+++ b/content/post/dev_201807012219.md
@@ -37,8 +37,9 @@ $ sudo chmod 0600 /etc/docker/server-key.pem /etc/docker/server-cert.pem /etc/do
 {
   "debug": true,
   "tls": true,
-  "tlscert": "/var/docker/server.pem",
-  "tlskey": "/var/docker/serverkey.pem",
+  "tlscacert": "/etc/docker/ca.pem",
+  "tlscert": "/etc/docker/server-cert.pem",
+  "tlskey": "/etc/docker/server-key.pem",
   "hosts": ["tcp://<config of CN>:2376"]
 }
 ```
