--- a/content/post/dev_201807151843.md
+++ b/content/post/dev_201807151843.md
@@ -37,6 +37,7 @@ Let's start registering a couple of URL paths and handlers:
 		r.HandleFunc("/products", ProductsHandler)
 		r.HandleFunc("/articles", ArticlesHandler)
 		http.Handle("/", r)
+    log.Fatal(http.ListenAndServe(":12345", nil))
 	}
 <!--more-->
 Here we register three routes mapping URL paths to handlers. This is
