--- a/content/post/dev_201807151843.md
+++ b/content/post/dev_201807151843.md
@@ -12,7 +12,7 @@ menu = "Development"
 +++
 
 The name mux stands for "HTTP request multiplexer". Like the standard
-http.ServeMux, mux.Router matches incoming requests against a list of
+`http.ServeMux`, `mux.Router` matches incoming requests against a list of
 registered routes and calls a handler for the route that matches the URL
 or other conditions. The main features are:
 
