--- a/content/post/dev_201807232147.md
+++ b/content/post/dev_201807232147.md
@@ -11,19 +11,19 @@ categories = [
 menu = "Development"
 +++
 
-### &sect;Definition
+#### &sect;Definition
 A module is a collection of related go packages. Modules are the unit of
 source code interchange and versionning.
 
 
-### &sect;Quick history
+#### &sect;Quick history
 - Go before 1.5: populating *GOPATH* with `go get`.
 - Go 1.5 and after: dependency vendoring is introduced.
 - [vgo] is proposed as a prototype for Go modules support.
 - Go 1.11 (beta): `vgo` is being merged and refined as `go mod` (experimental).
 
 
-### &sect;Terminology
+#### &sect;Terminology
 This article refers to recurrent expressions. Let's clarify them:
 
 - *"Module root"*: the directory containing the file named `go.mod`.
@@ -32,7 +32,7 @@ This article refers to recurrent expressions. Let's clarify them:
 is run.
 
 
-### &sect;Module structure
+#### &sect;Module structure
 A module is a tree of Go source files to which is added a file named *go.mod*.
 It contains the module import name, and the declaration of dependency
 requirements, exclusions and replacements. Its content would look like this:
@@ -70,7 +70,7 @@ that cached dependencies meet module requirements.
 A module root can reside **anywhere** on the filesystem, whatever is the
 current *GOPATH*.
 
-### &sect;Module dependencies
+#### &sect;Module dependencies
 Dependencies are downloaded and stored in `GOPATH/src/mod`. A direct
 consequence is that the use of a *vendor* directory is now obsolete.
 
@@ -88,7 +88,7 @@ slight change: the import path is suffixed with `@version`.
 folder.
 - VCS data is stored in the *vcs* folder.
 
-### &sect;Enabling Go modules support
+#### &sect;Enabling Go modules support
 In *Go 1.11beta2*, the environment variable `GO111MODULE` controls whether
 module support is enabled or disabled. It accepts three values: `on`, `off`,
 `auto` (default).
@@ -102,13 +102,13 @@ If unset or set to *"auto"*, module support is enabled outside of
 its subdirectories.
 
 
-### &sect;Integration
+#### &sect;Integration
 Go modules are integrated with Go tools, for instance upon invocation of
 commands such as `go build`, `go install`, `go run`, `go test` appropriate
 actions will fire up like populating the cache, creating or updating *go.mod*
 and *go.sum* etc.
 
-### &sect;Autoformat
+#### &sect;Autoformat
 You should never have to run these commands on your own since they are
 invoked by other commands, but for the sake of completeness, let's mention
 that `go mod -fmt` is the equivalent of `go fmt` for *go.mod* and *go.sum*
@@ -120,7 +120,7 @@ clean, like:
 - Updating requirements to reflect exclusions.
 
 
-### &sect;Initialization
+#### &sect;Initialization
 To create *go.mod*:
 ```
 go mod -init
@@ -132,7 +132,7 @@ For the sake of backward compatibility and in order to ease the transition
 process, module creation has support for popular dependency management tools
 like `dep`, `glide`, `glock`, `godep` and so on.
 
-### &sect;Synchronization
+#### &sect;Synchronization
 In order to clean up unused dependencies or to fetch new ones, use the sync
 option:
 
@@ -140,7 +140,7 @@ option:
 go mod -sync
 ```
 
-### &sect;Adding, excluding and replacing dependencies
+#### &sect;Adding, excluding and replacing dependencies
 Two possibilities: either edit *go.mod* by hand or use the CLI. The latter
 comes with the following commands:
 
@@ -164,14 +164,14 @@ go mod -replace src/thing@version=dst/thing@version
 go mod -dropreplace src/thing@version
 ```
 
-### &sect;Dependency graph
+#### &sect;Dependency graph
 To print the graph of module dependencies:
 
 ```
 go mod -graph
 ```
 
-### &sect;Generating *vendor*
+#### &sect;Generating *vendor*
 If for backward compatibility reasons you need to ship your application with
 vendoring, you can generate the *vendor* directory from *go.mod* thanks to:
 
@@ -179,7 +179,7 @@ vendoring, you can generate the *vendor* directory from *go.mod* thanks to:
 go mod -vendor
 ```
 
-### &sect;Getting help
+#### &sect;Getting help
 Don't hesistate to refer to `go help mod` and `go help modules` for further
 details about Go module support!
 
