--- a/content/post/dev_201803122145.md
+++ b/content/post/dev_201803122145.md
@@ -17,7 +17,7 @@ menu = "Development"
 
 [**TLS 1.2** RFC http://www.ietf.org/rfc/rfc5246.txt ](https://tools.ietf.org/html/rfc5246 "TLS 1.2")
 
-[**TLS 1.3** RFC https://www.ietf.org/id/draft-ietf-tls-tls13-28.txt ](https://tools.ietf.org/html/draft-ietf-tls-tls13-28 "draft-ietf-tls-tls13-28")
+[**TLS 1.3** RFC http://www.ietf.org/rfc/rfc8446.txt ](https://tools.ietf.org/html/rfc8446 "TLS 1.3")
 
 <!--more-->
 
