--- a/content/post/dev_201808191316.md
+++ b/content/post/dev_201808191316.md
@@ -35,8 +35,8 @@ menu = "Development"
 三节点（Node1/Node2/Node3)都执行
 
 ```
-sudo docker pull pd:v2.0.6  
-sudo docker pull tikv:v2.0.6  
+sudo docker pull pingcap/pd:v2.0.6  
+sudo docker pull pingcap/tikv:v2.0.6  
 sudo docker volume create pd-data  
 sudo docker volume create tikv-data
 
