--- a/content/post/day_2018090119142.md
+++ b/content/post/day_2018090119142.md
@@ -43,7 +43,7 @@ fn main() {
 }
  ```
 
- 没错，今天开始，我正式入坑[**Rust**](https://www.rust-lang.org 'Rust official site')，要成为[**Rustacean**](http://www.rustacean.net/ 'Hello, crustaceans')（Rust社区的成员被称为 Rustacean）的一员！我已经是一名Gopher（Golang程序猿的昵称），日常就是使用Go写写bug，研究一下大佬们的代码，然后继续写自个儿的bug，标准的Gopher节奏，WTF～  
+ 没错，今天开始，正式入坑[**Rust**](https://www.rust-lang.org 'Rust official site')，我要成为[**Rustacean**](http://www.rustacean.net/ 'Hello, crustaceans')（Rust社区的成员被称为 Rustacean）的一员！我已经是一名Gopher（Golang程序猿的昵称），日常就是使用Go写写bug，研究一下大佬们的代码，然后继续写自个儿的bug，标准的Gopher节奏，WTF～  
 
  话说，[**Golang**](https://golang.org 'Go official site')的吉祥物是Gopher（囊地鼠），陆上跑地欢；Rust的吉祥物是Crab（螃蟹），海里游地慌；巧合吗，很有意思！既如此，已经入坑了陆上跑地欢的`Go`，再入手个海里游地慌的`Rust`，又有何妨，乐哉!似乎还有一个`Swift`，吉祥物是天上飞的雨燕， 也是计划入手的一门语言，但不是现在（项目暂时没用上,不急）， 到时候就海陆空全齐了， 哈哈哈～  
 
