--- a/content/post/dev_201811171435.md
+++ b/content/post/dev_201811171435.md
@@ -16,7 +16,7 @@ menu = "Development"
 
 DAC(Discretionary Access Control)，自主访问控制，是最常用的一类访问控制机制，意思为主体（文件所有者）可以自主指定系统中其它用户对其文件的所有权，最典型的就是Linux的"拥有者/同组用户/其他"。这种方式虽然为用户提供了很大的灵活性，但是缺乏必要的安全性
 
-MAC(Mandat-ory Access Control)，强制访问控制,在这种机制下，系统中的每一个进程，每一个文件，每一个IPC主体都被管理员按照严格的规则设置了相应的安全属性，不能被用户和其它直接或间接的修改。
+MAC(Mandatory Access Control)，强制访问控制,在这种机制下，系统中的每一个进程，每一个文件，每一个IPC主体都被管理员按照严格的规则设置了相应的安全属性，不能被用户和其它直接或间接的修改。
 
 #### 二：[AppArmor](https://gitlab.com/apparmor/apparmor 'AppArmor in GitLab')
 
