--- a/content/post/dev_201811252059.md
+++ b/content/post/dev_201811252059.md
@@ -13,7 +13,7 @@ menu = "Development"
 
 #### &sect;解决ssh登录后闲置时间过长而断开连接
 
-我们通过终端连接服务器时，当鼠标和键盘长时间不操作，服务器就会自动断开连接，我们还需要重新连接，感觉很麻烦，总结一下解决此问题的方法
+通过终端连接服务器时，当鼠标和键盘长时间不操作，服务器就会自动断开连接，解决此问题的方法如下：
 
 * 方法一、
 修改/etc/ssh/sshd_config配置文件，找到ClientAliveCountMax（单位为分钟）修改你想要的值，
