--- a/content/post/dev_201909211159.md
+++ b/content/post/dev_201909211159.md
@@ -44,6 +44,7 @@ struct Date {
   day @2 :UInt8;
 }
 ```
+<!--more-->
 Some notes:
 
 * Types come after names. The name is by far the most important thing to see, especially when quickly skimming, so we put it up front where it is most visible. Sorry, C got it wrong.
