--- a/content/post/dev_201909211159.md
+++ b/content/post/dev_201909211159.md
@@ -13,7 +13,7 @@ menu = "Development"
 +++
 
 ## Schema Language
-Like Protocol Buffers and Thrift (but unlike JSON or MessagePack), Cap’n Proto messages are strongly-typed and not self-describing. You must define your message structure in a special language, then invoke the Cap’n Proto compiler (capnp compile) to generate source code to manipulate that message type in your desired language.
+Like Protocol Buffers and Thrift (but unlike JSON or MessagePack), Cap’n Proto messages are strongly-typed and not self-describing. You must define your message structure in a special language, then invoke the Cap’n Proto compiler (`capnp compile`) to generate source code to manipulate that message type in your desired language.
 
 #### For example:
 ```
