--- a/content/post/dev_202001050047.md
+++ b/content/post/dev_202001050047.md
@@ -67,7 +67,7 @@ menu = "Development"
 ```
 * ```--net=host``` 让docker使用本地网络
 * ```-e INET=etho``` 本地网卡接口名,这里替换成对应系统环境的接口名字，比如这里就是eth0
-* ```-e MYSQL_HOST=192.168.124.18``` 对应上面网卡接口(eth0)网络地址
+* ```-e MYSQL_HOST=192.168.124.18``` MySQL的host，如果mysql server部署在tars master的同一机器，比如上面，就对应网卡接口(eth0)的网络地址
 
 #### 效果展示
 在浏览器访问http://192.168.124.18:3000 或 http://localhost:3000 如下：  
